<resources>
    <string name="app_name">TravelCompanion</string>

    <string name="journeys">Journeys</string>
    <string name="events">Events</string>
    <string name="gallery">Gallery</string>

    <string name="active">ACTIVE</string>
    <string name="last">LAST</string>

    <string name="view_navigation_open">Open</string>
    <string name="view_navigation_close">Close</string>

    <string name="navigation_logout">Logout</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_refresh_photos">Refresh photos</string>
    <string name="menu_refresh_documents">Refresh documents</string>
    <string name="menu_add_item">Add item</string>
    <string name="menu_attach_photo">Attach photo</string>
    <string name="menu_attach_link">Attach link</string>
    <string name="menu_delete_all_photos">Delete all photos</string>
    <string name="menu_clear_local_photos">Clear local gallery</string>
    <string name="menu_delete_all_documents">Delete all documents</string>

    <string name="options">Options</string>
    <string name="context_edit">Edit</string>
    <string name="context_delete">Delete</string>

    <string name="create_journey">Create journey</string>
    <string name="create_event">Create event</string>
    <string name="create_choose_event_type">Choose event type</string>
    <string name="create_hint_title">Title</string>
    <string name="create_choose_date">Choose date</string>
    <string name="create_hint_place">Place</string>
    <string name="create_hint_departure_place">Departure place</string>
    <string name="create_hint_destination_place">Destination place</string>
    <string name="create_choose_start_date">Choose start date</string>
    <string name="create_choose_end_date">Choose end date</string>
    <string name="create_choose_departure_date">Choose departure date</string>
    <string name="create_choose_arrival_date">Choose arrival date</string>
    <string name="create_choose_start_time">Choose start time</string>
    <string name="create_choose_end_time">Choose end time</string>
    <string name="create_choose_departure_time">Choose departure time</string>
    <string name="create_choose_arrival_time">Choose arrival time</string>
    <string name="create_done">Done</string>
    <string name="create_error_enter_title">Please, enter a title</string>
    <string name="create_error_enter_place">Please, enter a place</string>
    <string name="create_error_enter_departure_place">Please, enter departure place</string>
    <string name="create_error_enter_destination_place">Please, enter destination place</string>
    <string name="create_error_enter_date">Please, choose event date</string>
    <string name="create_error_enter_start_date">Please, choose start date</string>
    <string name="create_error_enter_end_date">Please, choose end date</string>
    <string name="create_error_enter_start_time">Please, choose start time</string>
    <string name="create_error_enter_end_time">Please, choose end time</string>
    <string name="create_error_start_later_than_end">Start date must be earlier than end date</string>
    <string name="create_error_end_precedes_start">End date must be later than start date</string>
    <string name="create_error_date_out_of_bounds">Event date must be within journey dates</string>

    <string name="content_documents">Documents</string>
    <string name="content_links">Links</string>
    <string name="content_photos">Photos</string>
    <string name="content_attach_document">ATTACH DOCUMENT</string>
    <string name="content_attach_link">ATTACH LINK</string>
    <string name="content_attach_photo">ATTACH PHOTO</string>
    <string name="content_all_photos">ALL PHOTOS</string>
    <string name="gallery_photos">photos</string>

    <string name="login">LOGIN</string>
    <string name="login_hint_email">Email</string>
    <string name="login_hint_password">Password</string>
    <string name="login_create_account">Create account</string>
    <string name="login_login_successful">Login successful</string>
    <string name="login_failed">Login failed</string>
    <string name="login_email_not_found">Email not found</string>
    <string name="login_incorrect_password">Incorrect password</string>
    <string name="login_invalid_email">Enter a valid email address</string>
    <string name="login_invalid_password">Enter between 6 and 20 alphanumeric characters</string>

    <string name="signup_hint_username">Username</string>
    <string name="signup_create_account">Create account</string>
    <string name="signup_login">Have account? Login</string>
    <string name="signup_failed">Signup failed</string>
    <string name="signup_successful">Account created</string>
    <string name="signup_username_exists">Username already exists</string>
    <string name="signup_email_exists">Email already exists</string>
    <string name="signup_invalid_username">Enter at least 3 characters</string>
    <string name="signup_invalid_email">Enter valid email address</string>
    <string name="signup_invalid_password">Enter between 6 and 20 alphanumeric characters</string>

    <string name="event_type_plane">Plane</string>
    <string name="event_type_train">Train</string>
    <string name="event_type_bus">Bus</string>
    <string name="event_type_museum">Museum</string>
    <string name="event_type_cinema">Cinema</string>

    <string name="dialog_link_title">New link</string>
    <string name="dialog_hint_title">Title</string>
    <string name="dialog_hint_address">Address</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_apply">Apply</string>
    <string name="dialog_invalid_address">Enter valid address</string>

</resources>
